--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="send_money">Send money</string>
     <string name="view_balance">View balance</string>
     <string name="next">Next</string>
+    <string name="confirmation_message">$1 was sent to Adi</string>
 
 </resources>
